--- a/main.tex
+++ b/main.tex
@@ -53,13 +53,17 @@ Cloud Computing, Serverless, FaaS, Serverless Workflows, DAG, Metadata, Workflow
 \section{Introduction}
 \label{s:introduction}
 
-Serverless computing, with its Function-as-a-Service (FaaS) model, offers operational simplicity, automatic scalability, and a fine-grained pay-per-use pricing model by abstracting infrastructure management. This has led to its widespread adoption for event-driven systems, microservices, and web services on platforms like AWS Lambda\footnote{https://aws.amazon.com/pt/lambda/}, Azure Functions\footnote{https://azure.microsoft.com/en-us/products/functions}, and Google Cloud Functions\footnote{https://cloud.google.com/functions}.
+Function-as-a-Service (FaaS) represents a serverless cloud computing paradigm that simplifies application deployment by abstracting away infrastructure management. It provides automatic, elastic scalability—potentially without limit—along with a fine-grained, pay-per-use pricing model. This has led to its widespread adoption for event-driven systems, microservices, and web services on platforms like AWS Lambda\footnote{https://aws.amazon.com/pt/lambda/}, Azure Functions\footnote{https://azure.microsoft.com/en-us/products/functions}, and Google Cloud Functions\footnote{https://cloud.google.com/functions}. These applications typically benefit the most from FaaS because they are lightweight, stateless, and characterized by highly variable or unpredictable workloads, allowing them to leverage serverless platforms' on-demand scalability and cost-efficiency.
 
-This paradigm is also increasingly used to execute complex scientific and data processing workflows, such as the Cybershake~\cite{cybershake_workflow} seismic hazard analysis or Montage~\cite{montage_astronomy}, an astronomy image mosaicking workflow. These applications are structured as workflows—formally represented as Directed Acyclic Graphs (DAGs) of interdependent tasks. However, efficiently executing these complex workflows on serverless platforms remains a significant challenge. The stateless nature of serverless functions hinders direct communication, forcing data exchange between these tasks through external storage and leading to performance degradation and increased latency for data-intensive workflows.
+This paradigm is also increasingly used to execute complex scientific and data processing workflows, such as the Cybershake~\cite{cybershake_workflow} seismic hazard analysis or Montage~\cite{montage_astronomy}, an astronomy image mosaicking workflow. These applications are structured as workflows—formally represented as Directed Acyclic Graphs (DAGs) of interdependent tasks. However, efficiently executing these complex workflows on serverless platforms remains a significant challenge. 
 
-Existing solutions, including commercial stateful functions and research prototypes like WUKONG~\cite{wukong_2}, address these issues with improved orchestration and decentralized scheduling. Yet, these approaches often rely on one-step scheduling, making decisions based solely on the immediate workflow stage without considering global implications.
+Despite their advantages, serverless platforms present several limitations that complicate the execution of complex workflows. Cold starts can introduce unpredictable latency, particularly for short-lived functions, affecting overall workflow performance. The lack of direct inter-function communication means that tasks often have to rely on external services, such as message brokers or databases to exchange intermediate data, which can increase overhead and reduce efficiency. Interoperability between platforms is further limited by the use of platform-specific workflow definition languages, which restricts the portability of workflows across different serverless environments. Additionally, the stateless nature of functions, while simplifying scaling and fault tolerance, poses challenges for workflows that require persistent state or complex coordination. Finally, developers have limited control over the underlying infrastructure, restricting the ability to optimize resource usage or tune performance for specific workloads.
 
-In this paper, we argue that leveraging historical metadata from previous workflow runs can provide critical insights into task behavior. We propose a decentralized serverless workflow execution engine that uses this information to make smarter scheduling decisions, aiming to reduce overall workflow makespan and increase resource efficiency on serverless platforms.
+Existing solutions, including commercial stateful functions (e.g., AWS Step Functions\footnote{https://aws.amazon.com/pt/step-functions/}, Azure Durable Functions\footnote{https://azure.microsoft.com/en-us/products/functions}, and Google Cloud Workflows\footnote{https://cloud.google.com/workflows}) and research prototypes (PyWren~\cite{pywren}, WUKONG~\cite{wukong_2}, Unum~\cite{unum_decentralized_orchestrator}, DEWEv3~\cite{dewe_v3}) attempt to mitigate some of the limitations of serverless platforms through high-level strategies such as innovative scheduling and optimizations. Other research projects try to address the core FaaS limitations directly, either through architectural modification proposals (e.g., Faa\$T~\cite{faast_caching}, Palette~\cite{palette_load_balancing}, Lambdata~\cite{lambdata_intents}) or by proposing entirely new serverless architectures (e.g., OpenFaaS~\cite{openfaas}, Apache OpenWhisk~\cite{open_whisk}, Knative~\cite{knative}).
+
+These approaches, however, often rely on “one-step scheduling,” making decisions based solely on the immediate workflow stage without considering the broader context or the downstream effects on the overall workflow. This limitation motivated the central research question of this work: if we have knowledge of the computation steps, collect sufficient metrics on their behavior, and understand how they are composed to form the full workflow, can we leverage this information to make smarter scheduling decisions that minimize makespan and maximize resource efficiency in a FaaS environment?
+
+To answer this research question, we propose a decentralized serverless workflow execution engine that leverages historical metadata from previous workflow runs to generate informed task allocation plans, which are then executed by FaaS workers in a choreographed manner, without needing a central scheduler. By relying on such planning, our approach aims to minimize the use of external services, which are often employed by similar solutions for intermediate data exchange, thereby improving efficiency and reducing overhead.
 
 The main contributions of this work are as follows:
 \begin{itemize}
