--- a/main.tex
+++ b/main.tex
@@ -59,7 +59,7 @@ This paradigm is also increasingly used to execute complex scientific and data p
 
 Despite their advantages, serverless platforms present several limitations that complicate the execution of complex workflows. Cold starts can introduce unpredictable latency, particularly for short-lived functions, affecting overall workflow performance. The lack of direct inter-function communication means that tasks often have to rely on external services, such as message brokers or databases to exchange intermediate data, which can increase overhead and reduce efficiency. Interoperability between platforms is further limited by the use of platform-specific workflow definition languages, which restricts the portability of workflows across different serverless environments. Additionally, the stateless nature of functions, while simplifying scaling and fault tolerance, poses challenges for workflows that require persistent state or complex coordination. Finally, developers have limited control over the underlying infrastructure, restricting the ability to optimize resource usage or tune performance for specific workloads.
 
-Existing solutions, including commercial stateful functions (e.g., AWS Step Functions\footnote{https://aws.amazon.com/pt/step-functions/}, Azure Durable Functions\footnote{https://azure.microsoft.com/en-us/products/functions}, and Google Cloud Workflows\footnote{https://cloud.google.com/workflows}) and research prototypes (PyWren~\cite{pywren}, WUKONG~\cite{wukong_2}, Unum~\cite{unum_decentralized_orchestrator}, DEWEv3~\cite{dewe_v3}) attempt to mitigate some of the limitations of serverless platforms through high-level strategies such as innovative scheduling and optimizations. Other research projects try to address the core FaaS limitations directly, either through architectural modification proposals (e.g., Faa\$T~\cite{faast_caching}, Palette~\cite{palette_load_balancing}, Lambdata~\cite{lambdata_intents}) or by proposing entirely new serverless architectures (e.g., OpenFaaS~\cite{openfaas}, Apache OpenWhisk~\cite{open_whisk}, Knative~\cite{knative}).
+Existing solutions, including commercial stateful functions (e.g., AWS Step Functions\footnote{https://aws.amazon.com/pt/step-functions/}, Azure Durable Functions\footnote{https://azure.microsoft.com/en-us/products/functions}, and Google Cloud Workflows\footnote{https://cloud.google.com/workflows}) and research prototypes (PyWren~\cite{pywren}, WUKONG~\cite{wukong_2}, Unum~\cite{unum_decentralized_orchestrator}, DEWEv3~\cite{dewe_v3}) attempt to mitigate some of the limitations of serverless platforms through high-level strategies such as innovative scheduling and optimizations that try to achieve better locality, by moving computation closer to the data. Other research projects try to address the core FaaS limitations directly, either through architectural modification proposals (e.g., Faa\$T~\cite{faast_caching}, Palette~\cite{palette_load_balancing}, Lambdata~\cite{lambdata_intents}) or by proposing entirely new serverless architectures (e.g., OpenFaaS~\cite{openfaas}, Apache OpenWhisk~\cite{open_whisk}, Knative~\cite{knative}).
 
 These approaches, however, often rely on “one-step scheduling,” making decisions based solely on the immediate workflow stage without considering the broader context or the downstream effects on the overall workflow. This limitation motivated the central research question of this work: if we have knowledge of the computation steps, collect sufficient metrics on their behavior, and understand how they are composed to form the full workflow, can we leverage this information to make smarter scheduling decisions that minimize makespan and maximize resource efficiency in a FaaS environment?
 
@@ -254,7 +254,9 @@ Users can select from a 3 provided algorithms or implement their own planner by 
     \item \textbf{Non-Uniform}: All tasks will use different worker configurations (list of available resources is specified by the user). Fixed worker IDs are assigned to tasks. This algorithm starts by assigning the best available resources to all tasks. Then it runs a resource downgrading algorithm that attempts to downgrade resources of workers outside the critical path as much as possible without introducing a new critical path. Then, similarly to the Uniform planner, it applies \texttt{task-dup} optimization to suitable tasks and simulates the potential benefits of using \texttt{pre-load} optimizations on tasks that are on the critical path. It also applies \texttt{pre-warm} optimizations to suitable tasks.
 \end{enumerate}
 
-Planners can use different optimizations to achieve their goals, whether it's extracting maximum performance or minimizing resource utilization. Similarly to planners, users can also create new optimizations and define how workers should react to them. The provided optimizations are \textbf{pre-warm}, \textbf{pre-load} and \textbf{task-dup}.
+Planners can use different optimizations to achieve their goals, whether it's extracting maximum performance or minimizing resource utilization. With the information they have access to, these algorithms can estimate whether it is worthwhile to offload a task to a more powerful worker. This involves weighing the overhead of uploading the input data, waiting for the worker to be provisioned, and then executing the task, against the alternative of simply executing the task on the current, less powerful worker.
+
+Similarly to planners, users can also create new optimizations and define how workers should react to them. The provided optimizations are \textbf{pre-warm}, \textbf{pre-load} and \textbf{task-dup}.
 
 \textbf{pre-warm}(worker\_config):
 \begin{itemize}
